@@ -38,6 +38,7 @@ features:
 - SCIPgetVarCopy() will now copy the original bounds when called for an original variable
 - added method SCIPcreateSolCopyRemoveInfiniteFixings() which creates a copy of a solution, thereby trying to reduce
   the solution value of variables which were fixed to infinite to the smallest feasible value
+- added propagation method to cons_xor relying on Gaussian elimination, which can also produce feasible solutions
 
 performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
